# bpp

./: CMakeLists.txt  bpp.mdj
include/bpp/codegen/: Codegen.hpp
include/bpp/parser/json/: JsonUtil.cpp  JsonUtil.hpp  Util.cpp  Util.hpp
include/bpp/plugins/: PluginSelector.hpp
include/bpp/plugins/codegen/: Codegen.hpp
include/bpp/plugins/parser/: Parser.hpp
include/bpp/type/: Dto.cpp  Dto.hpp  Time.cpp  Time.hpp  TypeDefine.hpp  TypeUndef.hpp
src/: main.cpp  命名要求.md
src/dto/: UserDto.cpp  UserDto.hpp
src/plugin/: PluginsSet.hpp
